# inua_project

./: app.py  pyproject.toml  requirements.txt
core/: .env  __init__.py  config.py  models.py
core/admin/: forms.py  routes.py  utils.py
core/client/: _about.yaml  _program.json  _program.yaml  play.py  routes.py
instance/: database.db  inua.db
static/css/: base.css  main.css  style.css
static/js/: main.js  script.js
templates/: about.html  base.html  events.html  hero.html  hero1.html  home.html  layout.html  layout1.html  program.html  programs.html  testimonial.html
templates/admin/: home.html  inua_home.html  layout.html  login.html  program.html  register.html
templates/client/: base.html  home.html  programs.html
