[tool.poetry]
name = "env"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-bcrypt = "^1.0.1"
flask-sqlalchemy = "^3.1.1"
gunicorn = "^22.0.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"
flask-wtf = "^1.2.1"
flask-login = "^0.6.3"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
